converted to cockroachdb

--- a/hackthe6/backend/Pipfile
+++ b/hackthe6/backend/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 flask-cors = "*"
 pandas = "*"
+sqlalchemy = "*"
+sqlalchemy-cockroachdb = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
